# aether-backend

./: alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2079b22760ca_initial_migration.py  f658420969c7_initial_migration.py
app/: main.py
app/core/: database.py
app/models/: __init__.py  audit.py  document_chunk.py  file.py  organization.py  user.py  workspace.py  workspace_member.py
